--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
-.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
-
 html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
 
 *, *:before, *:after {box-sizing: inherit}
@@ -83,6 +81,13 @@ button {
 
 a {
     text-decoration: none;
+}
+
+h2 {
+    color: var(--white);
+    font-size: 2.4rem;
+    padding-bottom: 30px;
+    border-bottom: 3px solid var(--mediumGrey);
 }
 
 .wrapper {
@@ -177,12 +182,6 @@ h1 {
     margin: 0;
 }
 
-h2 {
-    color: var(--white);
-    font-size: 2.4rem;
-    padding-bottom: 30px;
-    border-bottom: 3px solid var(--mediumGrey);
-}
 
 /* Quiz */
 .quizForm {
@@ -214,9 +213,6 @@ h2 {
     margin: 0 auto;
 }
 
-.questionHeader {
-}
-
 .score .wrapper {
     background-color: var(--secondaryColor);
     display: flex;
@@ -231,16 +227,77 @@ h2 {
 /* FinalScore */
 
 .finalScoreContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-color: var(--black);
-    padding: 40px 0 60px;
-
-
+    padding: 40px 40px 60px;
 }
 
-.finalScoreContainer p {
+.finalScoreContainer form {
+    width: 100%;
+}
+
+.finalScoreContainer p, .finalScoreContainer label {
+    width: 100%;
     color: var(--white);
 }
 
+.finalScoreContainer label {
+    width: 100%;
+    display: block;
+}
+
+.finalScoreContainer button {
+    width: calc(50% - 10px);
+    margin: 20px 5px;
+    padding: 10px 0;
+}
+
+.finalScoreContainer input {
+    width: calc(50% - 10px);
+    height: 47.6px;
+    margin: 0 5px;
+}
+
+/* HighScore */
+.highScoreContainer {
+    background-color: var(--black);
+    padding: 40px 0;
+}
+
+.highScoreContainer h2 {
+    margin: 0;
+    padding: 0 0 40px 0;
+}
+
+ol {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    color: var(--white);
+    margin: 0;
+    padding: 35px 0;
+}
+
+.highScoreContainer li {
+    display: flex;
+    justify-content: space-between;
+}
+
+.highScoreContainer p:first-child {
+    margin-right: 20px;
+}
+
+.highScoreContainer p {
+    margin: 7px 0;
+}
+
+.highScoreContainer .innerWrapper {
+        margin: 0 auto;
+        max-width: 300px;
+        text-align: left;
+}
 
 /* media queries */
 
@@ -284,6 +341,11 @@ h2 {
     footer p {
         margin: 0 auto;
     }
+
+    .finalScoreContainer input, .finalScoreContainer button {
+        width: 100%;
+        margin: 20px 0;
+    }
 }
 
 @media (max-width: 560px) {
@@ -307,8 +369,8 @@ h2 {
         width: 100%;
     }
 
-    .playAgain {
-        max-width: 209px;
+    .highScoreContainer {
+        width: 100%;
     }
     
 }
