--- a/src/index.css
+++ b/src/index.css
@@ -206,6 +206,12 @@ h1 {
 }
 
 .quizForm input {
+    position: relative;
+    top: 4px;
+    flex-shrink: 0;
+    width: 20px;
+    height: 50px;
+    display: block;
     transition: none;
 }
 
@@ -219,6 +225,7 @@ h1 {
 }
 
 .choiceContainer {
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 250px;
